# argentumOS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  netlify.toml
app-store/: Cargo.toml  README.md  default.nix  shell.nix
app-store/argentum-app-store/: Cargo.toml
app-store/argentum-app-store-core/: Cargo.toml
app-store/argentum-app-store-core/src/: appstream.rs  flathub_api.rs  icons.rs  lib.rs  paths.rs
app-store/argentum-app-store-core/src/flatpak/: catalog.rs  info.rs  install.rs  installed.rs  mod.rs  permissions.rs  remotes.rs  runtimes.rs
app-store/argentum-app-store/resources/: argentum-app-store.desktop
app-store/argentum-app-store/src/: app.rs  main.rs  sidebar.rs  theme.rs
app-store/argentum-app-store/src/pages/: categories.rs  discover.rs  installed.rs  mod.rs  permissions.rs  remotes.rs  runtimes.rs  search.rs  updates.rs
app-store/argentum-app-store/src/pages/components/: app_card.rs  mod.rs  progress_row.rs  skeleton.rs
app-store/argentum-app-store/src/widgets/: mod.rs  prompt.rs
argentumOSwebsite/: content.config.ts  nuxt.config.ts  package.json
argentumOSwebsite/app/assets/css/: main.css
argentumOSwebsite/app/components/: FeatureGrid.vue  HeroSection.vue  ScreenshotPlaceholder.vue  SiteFooter.vue  SiteNav.vue
argentumOSwebsite/app/layouts/: default.vue
argentumOSwebsite/app/pages/: apps.vue  faq.vue  index.vue  install.vue  philosophy.vue
argentumOSwebsite/content/: apps.md  faq.md  index.md  install.md  philosophy.md
installer/: README.md  default.nix
installer/calamares/: settings.conf
installer/calamares/branding/argentum/: branding.desc  show.qml  stylesheet.qss
installer/calamares/modules/: partition.conf  welcome.conf
installer/calamares/modules/nixos-install/: main.py  module.desc
installer/qml/: main.qml
installer/qml/components/: ArgentumButton.qml  ArgentumInput.qml  ArgentumProgressBar.qml
installer/qml/pages/: Finish.qml  Summary.qml  Welcome.qml
modules/: installer.nix  settings.nix
modules/apps/: app-store.nix  argentum-update-notifier.nix  flatpak.nix
modules/boot/: default.nix
modules/branding/: default.nix
modules/desktop/: default.nix
modules/desktop/theme/: default.nix
modules/wine/: default.nix
scripts/: boot-installed.sh  build.sh  test-installer.sh  test-vm.sh
settings-panel/: Cargo.toml  README.md  default.nix  shell.nix
settings-panel/argentum-settings/: Cargo.toml
settings-panel/argentum-settings-core/: Cargo.toml
settings-panel/argentum-settings-core/src/: datetime.rs  display.rs  lib.rs  os_release.rs  sound.rs  system.rs  theme_scan.rs  wallpaper_scan.rs
settings-panel/argentum-settings-core/src/dbus/: accounts.rs  flatpak.rs  mod.rs  network.rs
settings-panel/argentum-settings/src/: app.rs  main.rs  sidebar.rs  theme.rs
settings-panel/argentum-settings/src/pages/: appearance.rs  datetime.rs  display.rs  mod.rs  network.rs  software.rs  sound.rs  system.rs  users.rs
settings-panel/argentum-settings/src/widgets/: mod.rs  prompt.rs
themes/argentum-plymouth/: default.nix
themes/argentum-plymouth/assets/: argentum.plymouth  argentum.script
