[package]
name = "argentum-app-store-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Backend logic (flatpak CLI, AppStream, Flathub API) for argentum-app-store. No UI framework dependencies."

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
flate2.workspace = true
quick-xml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
