[package]
name = "argentum-app-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native argentumOS app store — a Flathub front-end."

[[bin]]
name = "argentum-app-store"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
argentum-app-store-core.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
